--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "python-shell": "^0.4.0",
+    "rpio": "^0.9.20",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4"
   }
