--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pug": "2.0.0-beta11",
     "python-shell": "^0.4.0",
     "rpio": "^0.9.20",
+    "ds18b20-raspi": "^0.2.5",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4"
   }
