--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^2.0.0",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ds18b20-raspi": "^0.2.5",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "python-shell": "^0.4.0",
     "rpio": "^0.9.20",
-    "ds18b20-raspi": "^0.2.5",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4"
   }
