--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "nodemonConfig": {
+    "ignore": ["public/*"]
+  },
   "dependencies": {
     "bcrypt": "^2.0.0",
     "body-parser": "~1.18.2",
