--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node ./bin/www"
   },
   "nodemonConfig": {
-    "ignore": ["public/*"]
+    "ignore": [
+      "public/*"
+    ]
   },
   "dependencies": {
     "bcrypt": "^2.0.0",
@@ -14,7 +16,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "ds18b20-raspi": "^0.2.5",
+    "ds18x20": "^0.2.0",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "morgan": "~1.9.0",
